--- a/tests/XOR INTEGRY TEST - 15-10 verifed/script.html
+++ b/tests/XOR INTEGRY TEST - 15-10 verifed/script.html
@@ -9,6 +9,6 @@
     
 </body>
 
-<script src="../../dist/mlp.js"></script>
+<script src="../../dist/bundle.js"></script>
 <script src="script.js"></script>
 </html>
