--- a/tests/classificacao/XOR/xor-test.html
+++ b/tests/classificacao/XOR/xor-test.html
@@ -9,6 +9,6 @@
     
 </body>
 
-<script src="../../dist/bundle.js"></script>
-<script src="xor-sem-treinar.js"></script>
+<script src="../../../dist/bundle.js"></script>
+<script src="xor-test.js"></script>
 </html>
