Adicionando média do erro total antes e depois do treinamento no código da MLP, e feito mais um teste para testar essa média do erro

--- a/tests/regressao/PRECOSCASAS_RELU_RandomHE_Maior/testes20-12-2024-NaN-NaoOcorreuMais/precoscasas-test.html
+++ b/tests/regressao/PRECOSCASAS_RELU_RandomHE_Maior/testes20-12-2024-NaN-NaoOcorreuMais/precoscasas-test.html
@@ -9,7 +9,7 @@
     
 </body>
 
-<script src="../../../dist/bundle.js"></script>
+<script src="../../../../dist/bundle.js"></script>
 <script src="dataset.js"></script>
 <script src="precocasas-test.js"></script>
 </html>
